--- a/app/src/main/res/layout/reminder_list_item.xml
+++ b/app/src/main/res/layout/reminder_list_item.xml
@@ -4,7 +4,8 @@
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
-                                                   android:background="@color/reminder_list_item">
+                                                   android:background="@android:drawable/screen_background_light"
+                                                   android:backgroundTint="@color/reminder_list_item">
 
     <TextView
             android:text="TextView"
