--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -5,21 +5,21 @@
 
     <fragment android:id="@+id/recordVoiceFragment"
               android:name="com.rezen.rememberstuff.fragment.newentry.RecordVoiceFragment"
-              android:label="RecordVoiceFragment">
+              android:label="Record the reminder">
         <action android:id="@+id/action_recordVoiceFragment_to_chooseDatetimeFragment"
                 app:destination="@id/chooseDatetimeFragment"/>
     </fragment>
 
     <fragment android:id="@+id/chooseDatetimeFragment"
               android:name="com.rezen.rememberstuff.fragment.newentry.ChooseDatetimeFragment"
-              android:label="ChooseDatetimeFragment">
+              android:label="Choose date">
         <action android:id="@+id/action_chooseDatetimeFragment_to_listFragment" app:destination="@id/listFragment"
                 app:popUpTo="@id/listFragment" app:popUpToInclusive="true"/>
     </fragment>
 
     <fragment android:id="@+id/listFragment"
               android:name="com.rezen.rememberstuff.fragment.ListFragment"
-              android:label="ListFragment">
+              android:label="Reminders">
         <action android:id="@+id/action_listFragment_to_recordVoiceFragment" app:destination="@id/recordVoiceFragment"/>
     </fragment>
 </navigation>
