--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -4,21 +4,21 @@
             xmlns:tools="http://schemas.android.com/tools" android:id="@+id/navigation" app:startDestination="@id/listFragment">
 
     <fragment android:id="@+id/recordVoiceFragment"
-              android:name="com.rezen.rememberstuff.fragment.newentry.RecordVoiceFragment"
+              android:name="com.rezen.reminderapp.fragment.newentry.RecordVoiceFragment"
               android:label="Record the reminder">
         <action android:id="@+id/action_recordVoiceFragment_to_chooseDatetimeFragment"
                 app:destination="@id/chooseDatetimeFragment"/>
     </fragment>
 
     <fragment android:id="@+id/chooseDatetimeFragment"
-              android:name="com.rezen.rememberstuff.fragment.newentry.ChooseDatetimeFragment"
+              android:name="com.rezen.reminderapp.fragment.newentry.ChooseDatetimeFragment"
               android:label="Choose date">
         <action android:id="@+id/action_chooseDatetimeFragment_to_listFragment" app:destination="@id/listFragment"
                 app:popUpTo="@id/listFragment" app:popUpToInclusive="true"/>
     </fragment>
 
     <fragment android:id="@+id/listFragment"
-              android:name="com.rezen.rememberstuff.fragment.ListFragment"
+              android:name="com.rezen.reminderapp.fragment.ListFragment"
               android:label="Reminders">
         <action android:id="@+id/action_listFragment_to_recordVoiceFragment" app:destination="@id/recordVoiceFragment"/>
     </fragment>
